
2020-12-11 Franz Holzinger <franz@ttproducts.de>
    * bugfix: make an early stop of execution if the debug file is not writable in method initFile. No exception is possible here because it must be possible that the debug extension is usable at an early time during the initialization of TYPO3.

2020-11-23 Franz Holzinger <franz@ttproducts.de>
    * add support for TYPO3 10.4

2020-11-22 Franz Holzinger <franz@ttproducts.de>
    * new feature: static method errorLog as a replacement of a call of error_log

2020-11-07 Franz Holzinger <franz@ttproducts.de>
    * new feature: third parameter value F which will always force to produce an output

2020-08-30 Franz Holzinger <franz@ttproducts.de>
    * new feature: TRACEDEPTH_SYSLOG for the trace depth of the debug of sys_log entries.

2020-07-15 Franz Holzinger <franz@ttproducts.de>
    * compatibility: Do not use the new command, but \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance to create the $GLOBALS['error'] object.

2020-03-11 Franz Holzinger <franz@ttproducts.de>
    * new feature: Give the file name and the line number for the core ProductionExceptionHandler

2020-03-09 Franz Holzinger <franz@ttproducts.de>
    * new feature: Debug DBALException exception
    * new feature: LEVEL_EXCEPTION

2020-02-11 Franz Holzinger <franz@ttproducts.de>
    * bugfix: do not use debugBegin and debugEnd for better support of TYPO3 9.5+
    * better support vor backend debugging when fh_debug has not been included yet.

2020-01-10 Franz Holzinger <franz@ttproducts.de>
    * bugfix: remain backwards compatible to TYPO3 8.7

2020-01-02 Franz Holzinger <franz@ttproducts.de>
    * new feature: DEVLOG now means to activate any devLog, because I always have expected this. DEVLOGDEBUG is for the fh_debug internal devLog.

2019-12-21 Franz Holzinger <franz@ttproducts.de>
    * bugfix: after the </body> end tag also the </html> end tag shall follow automatically
    * bugfix: <br /> tags are invalid inside of headers
