@@ -1,4 +1,10 @@
 
+
+
+2021-01-05 Franz Holzinger <franz@ttproducts.de>
+    * deprecation no. 52694 in TYPO3 10.4: replace deleted method TYPO3\CMS\Core\Utility\GeneralUtility::devLog by a file writer.
+    * deprecation no. 89645 in TYPO3 10.4: replace deleted method  TYPO3\CMS\Core\Utility\GeneralUtility::sysLog by a file writer.
+
 2020-12-11 Franz Holzinger <franz@ttproducts.de>
     * bugfix: make an early stop of execution if the debug file is not writable in method initFile. No exception is possible here because it must be possible that the debug extension is usable at an early time during the initialization of TYPO3.
 
